      so it is treated as a proper module; __doc__, __file__ and
      __name__ now refer to the site_init.py file.

  From Russel Winder:

    - Users Guide updates explaining that Tools can be packages as
      well as python modules.

  From Gary Oberbrunner:

    - New systemwide and per-user site_scons dirs.

  From Dirk Baechle:

    - XML fixes in User's Guide.

  From Joe Zuntz:

    - Fixed a case-sensitivity problem with Fortran modules.

  From Bauke Conijn:

    - Added Users Guide example for auto-generated source code

  From Steven Knight:

    - Fix explicit dependencies (Depends()) on Nodes that don't have
      attached Builders.

    - Fix use of the global Alias() function with command actions.

  From Matt Hughes:

    - Fix the ability to append to default $*FLAGS values (which are
      implemented as CLVar instances) in a copied construction environment
      without affecting the original construction environment's value.

  From Rob Managan:

    - Updated the TeX command strings to include a /D on Windows in
      case the new directory is on a different drive letter.

    - Fixed the LaTeX scanner so dependencies are found in commands that
      are broken across lines with a comment or have embedded spaces.

    - The TeX builders should now work with tex files that are generated
      by another program. Thanks to Hans-Martin von Gaudecker for
      isolating the cause of this bug.
      
    - Added support for INDEXSTYLE environment variable so makeindex can
      find style files.

    - Added support for the bibunits package so we call bibtex on all
      the bu*.aux files.

  From Russel Winder:

    - Add support for DMD version 2 (the phobos2 library).

  From William Deegan:

    - Add initial support for VS/VC 2010 (express and non-express versions)
    - Remove warning for not finding MS VC/VS install.
      "scons: warning: No version of Visual Studio compiler found
        - C/C++ compilers most likely not set correctly"