@@ -44,7 +44,7 @@ RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
     --  NEW FEATURE
 
-    --  Support for Latex bubunits package has been added along with 
+    --  Support for Latex bibunits package has been added along with 
         support for tex files generated by other builders.
 
 
@@ -90,7 +90,7 @@ RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
         1.3.  By default, it should now use the latest installed
         Visual Studio version on your machine, and compile for 32 or
         64 bits according to whether your OS is 32 or 64 bits (32/64
-        bit python makes no difference).
+        bit Python makes no difference).
 
 	Two new variables control Visual Studio: MSVC_VERSION and
 	TARGET_ARCH.  These variables ONLY take effect when passed to
